Fix image pull secret name from stackrox-collector to collector-stackrox (#7549)

--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
@@ -15,12 +15,12 @@ expect: |
   # Ensure that default/legacy service accounts are always referenced in the correct fashion in the non-error case
 
   assumeThat(.error == null) | .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox")
-  assumeThat(.error == null) | .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox-collector")
+  assumeThat(.error == null) | .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "collector-stackrox")
 
   assumeThat(.error == null) | .serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox")
-  assumeThat(.error == null) | [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+  assumeThat(.error == null) | [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "collector-stackrox")] | assertThat(length == 0)
   assumeThat(.error == null) | .serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox")
-  assumeThat(.error == null) | [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+  assumeThat(.error == null) | [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "collector-stackrox")] | assertThat(length == 0)
 
   # Ensure that newly created secrets are always referenced in the correct fashion in the non-error case.
   assumeThat(.error == null) | .serviceaccounts["collector"] | [.imagePullSecrets[] |
@@ -102,12 +102,12 @@ tests:
 - name: "default IPS are referenced in service accounts"
   expect: |
     .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox")
-    .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox-collector")
+    .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "collector-stackrox")
 
     .serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox")
-    [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+    [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "collector-stackrox")] | assertThat(length == 0)
     .serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox")
-    [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+    [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "collector-stackrox")] | assertThat(length == 0)
 
 - name: "additional IPS are referenced in service accounts"
   values:
