ROX-6520: Add Feature Flag for Blocked Flows (#7542)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2195,6 +2195,7 @@ jobs:
       - AUTH0_SUPPORT: false
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -2977,6 +2978,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true 
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3267,6 +3269,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3338,6 +3341,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
@@ -3369,6 +3373,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
@@ -3406,6 +3411,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3443,6 +3449,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4006,6 +4013,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4034,6 +4042,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4061,6 +4070,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4162,6 +4172,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4279,6 +4290,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
+      - ROX_NETWORK_DETECTION_BLOCKED_FLOWS: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
